# agent-manager-daemon

./: .gitignore  README.en.md  README.md  config.yaml  install.sh  pyproject.toml
src/agent_manager/: __init__.py  __main__.py  api.py  api_auth.py  app.py  auth.py  config.py  logging_setup.py  upgrade.py  web.py
static/: style.css
systemd/: agent-manager.service
templates/: base.html  change_password.html  login.html
tests/: conftest.py  test_adhoc_cert.py  test_api.py  test_auth.py  test_build_registry.py  test_config_tls.py  test_upgrade.py
