[project]
name = "agent-manager-daemon"
version = "0.1.0"
description = "Linux agent management daemon: web-based OS password change + FTP-driven agent upgrade API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "flask>=3.0,<4.0",
    "pyyaml>=6.0,<7.0",
    "passlib>=1.7.4,<2.0",
    "cryptography>=42.0",
    "gunicorn>=22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
agent-manager = "agent_manager.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_manager"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"